[project]
name = "cherrypick-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "@LYST",email = "101388967+gabury1@users.noreply.github.com"}
]

readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = "^0.23.0"
sqlalchemy = "^2.0.39"
pymysql = "^1.1.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
