[project]
name = "cherrypick-data-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "@LYST",email = "101388967+gabury1@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "lxml-html-clean (>=0.4.2,<0.5.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "selenium (>=4.32.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "openai (>=1.79.0,<2.0.0)",
    "redis (>=6.1.0,<7.0.0)",
    "tldextract (>=5.3.0,<6.0.0)",
    "slack-sdk (>=3.35.0,<4.0.0)",
    "undetected-chromedriver (>=3.5.5,<4.0.0)",
    "streamlit-option-menu (>=0.4.0,<0.5.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
]

[tool.poetry]
packages = [{include = "cherrypick_data_analysis", from = "src"}]


[tool.poetry.group.dev.dependencies]
alembic = "^1.16.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
